chore: clean build artifacts

--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "license": "MIT",
   "main": "index.js",
   "types": "index.d.ts",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/robolab-io/iohook.git"
+  },
   "scripts": {
     "install": "node install.js",
     "build": "node build.js --upload=false",
