--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -26,7 +26,7 @@ jobs:
           cache: 'npm'
       # 'npm install' also runs node install, the post-install script which tries to download prebuilds of iohook.
       # oh, that's why we have npm ci
-      - run: npm ci
+      - run: npm ci --ignore-scripts
       - run: npm run build:ci
 
       - name: Upload build artifacts
