--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -25,7 +25,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
       - run: npm ci --ignore-scripts
-      - run: npm run build:ci
+      - run: npm run build:ci --all
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v3.1.2
@@ -49,7 +49,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
       - run: npm ci --ignore-scripts
-      - run: npm run build:ci
+      - run: npm run build:ci --all
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v3.1.2
@@ -79,7 +79,7 @@ jobs:
         run: sudo apt-get install libxtst-dev
 
       - run: npm ci --ignore-scripts
-      - run: npm run build:ci
+      - run: npm run build:ci --all
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v3.1.2
