chore(ci): upload artifacts from prebuild to tagged release

--- a/.github/workflows/create-tagged-release.yaml
+++ b/.github/workflows/create-tagged-release.yaml
@@ -16,3 +16,6 @@ jobs:
           repo_token: '${{ secrets.GITHUB_TOKEN }}'
           prerelease: false
           draft: true
+          files: |
+            prebuilds/*.tar.gz
+            prebuilds/*.zip
