--- a/package.json
+++ b/package.json
@@ -13,13 +13,7 @@
   "scripts": {
     "build": "node build.js --upload=false",
     "build:ci": "node build.js --all",
-    "build:print": "node -e 'require(\"./helpers\").printManualBuildParams()'",
-    "test": "jest",
-    "lint:dry": "eslint --ignore-path .lintignore .",
-    "lint:fix": "eslint --ignore-path .lintignore --fix . && prettier --ignore-path .lintignore --write .",
-    "docs:dev": "vuepress dev docs",
-    "docs:build": "vuepress build docs",
-    "docs:deploy": "npm run docs:build && gh-pages -d docs/.vuepress/dist/"
+    "build:print": "node -e 'require(\"./helpers\").printManualBuildParams()'"
   },
   "keywords": [
     "hook",
@@ -50,12 +44,8 @@
       "prettier --write"
     ]
   },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
   "dependencies": {
+    "nan": "github:robolab-io/nan#remove_accessor_signature",
     "nugget": "^2.0.1",
     "pump": "^1.0.3",
     "rc": "^1.2.8",
@@ -70,25 +60,12 @@
     "eslint-plugin-only-warn": "^1.0.2",
     "eslint-plugin-prettier": "^3.4.0",
     "fs-extra": "^9.0.1",
-    "gh-pages": "^3.2.0",
-    "htmlhint": "^0.15.1",
-    "husky": "^6.0.0",
-    "jest": "^26.6.3",
-    "lint-staged": "^11.0.0",
     "minimist": "^1.2.5",
     "node-abi": "^2.30.1",
     "node-gyp": "^9.4.0",
     "prebuild": "^10.0.1",
     "prettier": "^2.3.1",
-    "robotjs": "^0.6.0",
-    "tar": "^6.0.5",
-    "vuepress": "^1.7.1"
-  },
-  "resolutions": {
-    "nan": "github:tec27/nan#remove_accessor_signature"
-  },
-  "overrides": {
-    "nan": "github:tec27/nan#remove_accessor_signature"
+    "tar": "^6.0.5"
   },
   "supportedTargets": [
     [
