feat: CI for electron >13 and node  >16

--- a/package.json
+++ b/package.json
@@ -74,9 +74,79 @@
       "116"
     ],
     [
+      "electron",
+      "24.0.0",
+      "114"
+    ],
+    [
+      "electron",
+      "23.0.0",
+      "113"
+    ],
+    [
+      "electron",
+      "22.0.0",
+      "110"
+    ],
+    [
+      "electron",
+      "21.0.0",
+      "109"
+    ],
+    [
+      "electron",
+      "20.0.0",
+      "107"
+    ],
+    [
+      "electron",
+      "19.0.0",
+      "106"
+    ],
+    [
+      "electron",
+      "18.0.0",
+      "103"
+    ],
+    [
+      "electron",
+      "17.0.0",
+      "101"
+    ],
+    [
+      "electron",
+      "16.0.0",
+      "99"
+    ],
+    [
+      "electron",
+      "15.0.0",
+      "98"
+    ],
+    [
+      "electron",
+      "14.0.0",
+      "97"
+    ],
+    [
+      "electron",
+      "13.0.0",
+      "89"
+    ],
+    [
       "node",
       "18.0.0",
       "108"
+    ],
+    [
+      "node",
+      "17.0.0",
+      "102"
+    ],
+    [
+      "node",
+      "16.0.0",
+      "93"
     ]
   ]
 }
