--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -25,7 +25,7 @@ jobs:
           node-version: ${{ matrix.node-version }}
           cache: 'npm'
       - run: npm ci --ignore-scripts
-      - run: npm run build:ci --all
+      - run: npm run build:ci --all --openssl_fips=''
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v3.1.2
@@ -76,10 +76,7 @@ jobs:
       - name: Install dependencies
         run: |
           sudo apt-get install xcb libxcb-xkb-dev x11-xkb-utils libx11-xcb-dev libxkbcommon-x11-dev
-          sudo add-apt-repository ppa:ubuntu-toolchain-r/test -y
           sudo apt-get update
-          sudo apt-get install gcc-7 g++-7 -y
-          sudo update-alternatives --install /usr/bin/gcc gcc /usr/bin/gcc-7 70 --slave /usr/bin/g++ g++ /usr/bin/g++-7
       - name: Install dependencies (Ubuntu)
         run: sudo apt-get install libxtst-dev
 
